# r-kernel

./: Cargo.toml  Makefile  readme.md
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: context.rs  context_switch.asm  device.rs  gdt.rs  idt.rs  mod.rs
src/arch/x86_64/interrupts/: exceptions.rs  irq.rs  mod.rs
src/arch/x86_64/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/arch/x86_64/memory/heap/: bump_allocator.rs  mod.rs
src/device/: keyboard.rs  mod.rs  pic8259.rs  serial.rs  vga_buffer.rs
src/device/keyboard/: helpers.rs  mod.rs
src/sync/: irq_lock.rs  mod.rs
src/time/: mod.rs
