[package]
name = "rust_kernel"
version = "0.1.0"
authors = ["Marijn Hurkens <marijnhurkens@gmail.com>"]

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"
pic8259_simple = "0.1.1"
cpuio = "0.2.0"

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-rust_kernel.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]