[package]
name = "rust_kernel"
version = "0.1.0"
authors = ["Marijn Hurkens <marijnhurkens@gmail.com>"]
default-run = "rust_kernel"

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory", "recursive_page_table"]}
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.1.0"
x86_64 = "0.7.5"
pic8259_simple = "0.1.1"
once = "0.3.3"
linked_list_allocator = "0.6.0"

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-rust_kernel.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]